Send your Thanks emails to: 
Splashy Developers <splashy-devel@lists.alioth.debian.org>
-------------------------------------------------------------------------------

Changes between 0.3.6 and 0.3.7
-------------------------------
 
 * scrolls text during boot (splashy_update "scroll text to display")
 * splashy_update commands print_scroll is now just scroll. Same for its alias "TEXT_SCROLL->SCROLL)
 * splashy_update command clrprint is now just "clear"

Changes between 0.3.5 and 0.3.6
-------------------------------

 * Documentation updates
 * Support for OpenSuSE/Fedora and other RPM-based systems
 * Splashy now works with Directfb 1.x
 * Splashy runs from initramfs under Init again (Thanks to RPath Linux and Directfb Dev Team) (upstart works just like before)
 * Themes are now in /usr/share/splashy/themes and a symlink from /etc/splashy/themes points to that location (See README for more)

Changes between 0.3.4 and 0.3.5
-------------------------------

 * Bug fixes

Changes between 0.3.3 and 0.3.4
-------------------------------

 * Make init scripts consistent. STEPS_DIR can be defined in /etc/default/splashy

Changes between 0.3.1 and 0.3.3 
-------------------------------

Changes between 0.3.0 and 0.3.1
-------------------------------

 * Drop JPEG support (use GIF or PNG instead)

Changes between 0.2.3 and 0.3.0
-------------------------------

 * Themes schema stable (v1.1)
 * Lots of changes in build system (autofoo, etc)
 * Introduction of libsplashy, used by uswsusp
 * Clean-up of initramfs-tools/*, lsb-base-logging.sh, init.d/splashy

Changes between 0.2.2 and 0.2.3
-------------------------------
 
 * Minor bug fix:
   - splashy_video.c used wrong name for font height
 * drops splashy_pgrep as this is no longer used

Changes between 0.2.1 and 0.2.2
-------------------------------

  * Minor bug fix:
    - lsb-base-logging.sh needed RUNLEVEL to be defined always
    - splashy-update-progress-steps needed RUNLEVEL to be defined